@@ -48,17 +48,17 @@ public class HibernateEjb3Database extends HibernateDatabase {
      */
     @Override
     protected Metadata buildMetadataFromPath() throws DatabaseException {
-        
+
         EntityManagerFactoryBuilderImpl builder = createEntityManagerFactoryBuilder();
 
         this.entityManagerFactory = builder.build();
 
         Metadata metadata = builder.getMetadata();
-        
+
         String dialectString = findDialectName();
         if (dialectString != null) {
             try {
-                dialect = (Dialect) Class.forName(dialectString).newInstance();
+                dialect = (Dialect) Class.forName(dialectString).getDeclaredConstructor().newInstance();
                 Scope.getCurrentScope().getLog(getClass()).info("Using dialect " + dialectString);
             } catch (Exception e) {
                 throw new DatabaseException(e);
